# house-management

./: Dockerfile  docker-compose.yml  pyproject.toml
